Code Cleanup
Condensed any redundant code